css/contacts.css
/* ... */
#photowrapper { 
	position: absolute;
	float: left; 
	width: 180px; height: 180px;
	margin-top: 10px;
	margin-left: -145px;
}

#photowrapper .favorite {
	display: inline-block;
	float: right;
	position: absolute;
	right: -6px; top: -6px;
	width: 25px; height: 25px;
}
#photowrapper.wait { opacity: 0.6; filter:alpha(opacity=0.6); z-index:1000; cursor: wait; }
#phototools {
	position:absolute;
	bottom: 10px;
	margin: 0;
	width:auto; height: auto;
	background-color:#fff;
	list-style-type:none; border-radius: 3px;
	border: 1px solid #DDDDDD;
	/*-moz-box-shadow: 0 1px 2px #777; -webkit-box-shadow: 0 1px 2px #777; box-shadow: 0 1px 2px #777;*/
}
#phototools li { display: inline-block; }
#phototools li a {
	float:left;
	opacity: 0.6;
	width: 40px; height: 40px;
	background-position: center;
	background-size: 80%;
}
#phototools li a:hover { opacity: 0.8; }
#contactphoto_fileupload, #import_upload_start { -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=0)"; filter:alpha(opacity=0); opacity:0; z-index:1001; }

#dialog-merge-contacts .mergelist {
	margin: 10px;
}
#dialog-merge-contacts .mergelist > li {
	height: 30px;
	-webkit-transition:background-image 500ms; -moz-transition:background-image 500ms; -o-transition:background-image 500ms;  transition:background-image 500ms;
	position:relative;
	background-position: 0 .2em !important; background-repeat:no-repeat !important;
}
#dialog-merge-contacts .mergelist > li > input {
	opacity: 0;
}
#dialog-merge-contacts .mergelist > li > input:hover, #dialog-merge-contacts .mergelist > li > input:checked {
	opacity: 1;
}
#dialog-merge-contacts .mergelist > li > label {
	padding-left: 20px;
	font-weight: normal;
}
.no-svg .favorite { display: inline-block; float: left; height: 20px; width: 20px;  }

.svg .favorite { display: inline-block; float: left; height: 20px; width: 20px; background-size:contain; }

#app-content {
	top: 44px;
}

/* Contact layout */

#contact > ul > li { white-space: nowrap; margin-right: 110px; }
#contact > ul.propertylist {
	font-size: 10px;
	/*display: table;
	border-spacing: 1em;
	border: thin solid black;*/
}
#contact > ul.propertylist > li {
	display: inline-block;
	padding: 1em;
	/*display: table-cell;*/
}

.display .meta { text-align: right; margin-left: -30px; }
.display .adr {
	padding-left: 5px;
	padding-right: 5px;
	cursor: pointer;
	border: 1px solid rgb(221, 221, 221);
	border-radius: 3px;
	line-height: 28px;
}
.adr.editor {
	width: 20em;
	margin-left: 120px;
}
.adr.editor ul {
	-moz-column-count: 1;
	-webkit-columns: 1;
	-o-columns: 1;
	columns: 1;
}
fieldset.adr ul li input.label { margin-top: -4px !important; }
.adr.editor input.value.street, ul.adr.edit input.value.country, ul.adr.edit input.value.region { width: 19em;}
.adr.editor input.value.zip { width: 100px; }
.adr.editor input.value.city { width: 192px; margin:4px; }

/* contact list */

#contactsHeader {
	height: 51px;
	color: #999;
	z-index: 2;
	width: 100%;
	line-height: 51px;
}
.multiselect #contactsHeader {
    -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
    left: 0;
    top: 44px;
    margin-left: 330px; padding-right: 330px;
    position: fixed;
    z-index: 10;
}
#contactsHeader > tr {
}
#contactsHeader > td {
	z-index: 300;
	border-bottom: 1px solid rgb(221, 221, 221);	
}
#contactsHeader > td.name {
	padding-right: 9px;
}
.multiselect #contactsHeader > td.name {
	width: 100%;
	display: inline-block;
	color: #000;
	background-color: rgba(220, 220, 220, 0.8);
	opacity: 0.9;
}
#contactsHeader .delete {
	background-image: none;
}
#contactsHeader .delete img {
	vertical-align: middle;
	margin-bottom: 2px;
}
#contactsHeader select {
	width: auto;
	max-width: 120px;
	height: 22px;
	font-weight: normal;
	color: black;
	border: 0;
	background-color: rgba(255,255,255,0);
	-webkit-appearance: none;
	-moz-appearance: none;
    text-indent: 0.01px;
    text-overflow: '';
}
#contactsHeader select.sort {
	margin-left: 50px;
	opacity: 1;
	color: rgb(153, 153, 153);
}
#contactsHeader .actions > * {
	padding-left: 8px;
	padding-right: 8px;
	font-weight: bold;
	float: right;
}
#contactsHeader .action.a {
	margin: 0;
	padding: 0;
}
#contactsHeader .actions > .toggle {
	float: left;
}
#contactsHeader .actions > select {
	float: right;
	width: auto;
	height: 19px;
	padding-left: 18px;
	padding-right: 8px;
	padding-top: 2px;
	padding-bottom: 0px;
	margin-top: 14px;
	margin-bottom: 14px;
	font-weight: bold;
	background-position: -13px;
}
#contactsHeader .actions_left {
	float: left;
}
#contactlist > tbody {
	position: relative;
 	padding-bottom: 300px;
	width: 100%;
	z-index: 1;
}
#contactlist.multiselect {
	top: 51px;
}
#contactlist {
	position: relative;
	width: 100%;
	min-width: 502px;
}
#contactlist td {
	-moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
}
#contactlist .nametext {
	margin-left: 55px;
}
#contactlist .avatar {
	position: absolute;
	margin-top: 10px;
	height: 32px;
	width: 32px;
 	margin-left: 10px;
}
/* Override default style for an open contact */
tbody tr, tbody tr.hover {
	background-color: #fff !important;
}
tbody tr.contact.active, tbody tr.contact:hover {
	background-color: #f8f8f8 !important;
}
#contactlist > tbody > tr { height: 51px; display: none; }
#contactlist > tbody > tr.contact.active, #contactlist  > tbody > tr.contact:hover { background-color: #eee; }
#contactlist > tbody > tr > td {
	border-bottom: 1px solid #DDDDDD;
	font-weight: normal;
	text-align: left;
	overflow: hidden;
	text-overflow: ellipsis;
	vertical-align: top;
	white-space: nowrap;
}
#contactlist tbody > tr > td {
	min-width: 80px;
	max-width: 250px;
	line-height: 50px;
}
#contactlist tbody > tr > td.name > input[type=checkbox]:first-child:not(.toggle) {
	-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=0)"; filter:alpha(opacity=0); opacity:0;
	float:left;
	margin: 32px 0 4px 32px;
	position: absolute;
	z-index: 1;
}
/* ... */

